discussion/kv_engine/157427/157427_rev21_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45654: Move to pausable task

Change-Id: I35632ee6911c5d49c51fccecee1786cb40589b8f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-07-23 14:22:11.000000000
Message: 
Uploaded patch set 21.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-23 15:57:58.000000000
Message: 
Patch Set 21: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37978/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37978/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10783/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:135:11: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
    check();
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:139:11: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
    check();
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:156:8: error: field has incomplete type "void" [clang-diagnostic-error]
  void check() const noexcept {
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:156:13: error: expected ";" at end of declaration list [clang-diagnostic-error]
  void check() const noexcept {
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:156:14: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
  void check() const noexcept {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:174:3: error: unknown type name "Storage" [clang-diagnostic-error]
  Storage storage_{};
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:147:15: error: variable has incomplete type "void" [clang-diagnostic-error]
  static void check() noexcept;
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:147:20: error: expected ";" at end of declaration list [clang-diagnostic-error]
  static void check() noexcept;
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:147:21: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
  static void check() noexcept;
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:1756:51: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
      F14LinkCheck<getF14IntrinsicsMode()>::check();
                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:1873:53: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
        F14LinkCheck<getF14IntrinsicsMode()>::check();
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10783/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:135:11:
error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10783/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/398/ : FAILURE

Compile error at [2021-07-23T14:27:38.379Z] tlm/deps/folly.exploded/include/folly/Indestructible.h:135:11:
error: too few arguments provided to function-like macro invocation
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/398/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12369/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0110/0157]: test sync vbucket destroy restart...../kv_engine/engines/ep/tests/ep_testsuite_common.cc:496 Test failed: `" (Expected `success", got `no such key" - Failed to fetch document)
[2021-07-23T14:28:55.674Z] (140 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12369/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12369/ )

Test exceeded the timeout:
[2021-07-23T14:28:52.358Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12369/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12546/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0064/0157]: duplicate items on disk...../kv_engine/engines/ep/tests/ep_test_apis.cc:552 Test failed: `" (Expected `Success", got `Not found" - evict_key: expected SUCCESS when evicting key.)
[2021-07-23T14:30:02.547Z] (58 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12546/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12546/ )

Test exceeded the timeout:
[2021-07-23T14:29:56.007Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12546/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20443/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12893/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0064/0157]: duplicate items on disk...../kv_engine/engines/ep/tests/ep_test_apis.cc:553 Test failed: `" (Expected `Success", got `Not found" - evict_key: expected SUCCESS when evicting key.)
[2021-07-23T14:34:37.851Z] (831 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12893/ )

ThreadSanitizer issue: data race /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/vbucket.cc:3091 in VBucket::setMutationMemoryThreshold(unsigned long)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12893/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9441/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32379/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/370/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11455/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
